Fix network header tall header vertical alignment and move from cleanup sheet

--- a/less/_clean-this-up.less
+++ b/less/_clean-this-up.less
@@ -369,28 +369,6 @@ html /deep/ .component-root {
 	&:extend(.tabbed-pane-placeholder);
 }
 
-// network header tall view
-.network-details-view-tall-header .network-item-view::shadow {
-	.tabbed-pane-header {
-		padding-top: 0 !important;
-	}
-	.tabbed-pane-header-tab {
-		height: 31px !important;
-		padding-top: 5px !important;
-	}
-}
-
-// network view headers
-.network .request-headers-view .parent {
-	&:extend(#network-views .request-headers-view .parent);
-	margin-top: 1px !important;
-}
-
-// reduce space between network headers and subnav menu
-.data-grid .header-container {
-	top: -1px !important;
-}
-
 // Suggest box is now in shadow dom
 ::shadow {
 	.suggest-box {
